Solve conflict between master and body

--- a/about.html
+++ b/about.html
@@ -1,5 +1,16 @@
 <!doctype html>
 <html>
-	<head></head>
-	<body></body>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>About</title>
+	</head>
+	<body>
+		<h1>About</h1>
+		<ul>
+			<li>Name: cjy0019</li>
+			<li>Locale: Seoul, Korea</li>
+			<li>Hobby: Playing Baseball</li>
+		</ul>
+	</body>
 </html>
